Journal: Zero-ing, the different between code and image data?
Also included the (Z) version in the repo now

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Piss off, macos
+# Piss off, macOS
 .DS_Store
-# Don't want this file visible while zeroing it
-roms/Super Mario Nothing (Z).nes
+# Didn't want this file visible while zeroing it
+# but now it's nothing
+# roms/Super Mario Nothing (Z).nes
